# ai-agents-journal

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: __init__.py  env.py
day-02/: main.py
day-03/: main.py
day-04/: main.py
day-05/: main.py
day-06/researcher/: agent.py  instructions.md
day-07/: main.py
day-08/: main.py
day-08/client/: index.html  script.js  style.css
day-10/: bot.sql  main.py
day-11/: main_1.py  main_2.py
day-12/: boxes.sql  files.sql  main_1.py  main_2.py  main_3.py  weather.sql
day-13/: main_1.py  main_2.py
day-14/: handoffs.sql  main.py
day-15/: main.py
day-16/: main_1.py  main_2.py  weather.sql
day-17/: main.py
day-18/: main.py
day-19/: main.py
